Changed the return values of two query builder methods and fixed the deprecated newInstance method in object builder